add: components<button, link, logo, input, select>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
     "paths": {
       "@/*": ["src/*"]
     },
+
+    // types
+    "types": ["vite-plugin-svgr/client"]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
