add: header view

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,10 @@
     /* absolute path */
     "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@assets/*": ["src/assets/*"],
+      "@constants/*": ["src/constants/*"]
     },
 
     // types
